Burbujita/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIFERENTE
    DOSPUNTOS
    IGUAL
    MAYORIGUAL
    MENORIGUAL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque FIN
Rule 2     funcion -> FUNCION ORDENAR PARIZQ parametro PARDER declaraciones cuerpo_funcion
Rule 3     parametro -> VECTOR ARREGLO
Rule 4     declaraciones -> ENTERO I PUNTOYCOMA
Rule 5     declaraciones -> ENTERO J PUNTOYCOMA
Rule 6     declaraciones -> ENTERO TEMP PUNTOYCOMA
Rule 7     declaraciones -> declaracion_tamano
Rule 8     declaraciones -> declaraciones ENTERO I PUNTOYCOMA
Rule 9     declaraciones -> declaraciones ENTERO J PUNTOYCOMA
Rule 10    declaraciones -> declaraciones ENTERO TEMP PUNTOYCOMA
Rule 11    declaraciones -> declaraciones declaracion_tamano
Rule 12    declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA
Rule 13    cuerpo_funcion -> bucle_principal mostrar_arreglo FIN
Rule 14    mostrar_arreglo -> MOSTRAR PARIZQ ARREGLO PARDER PUNTOYCOMA
Rule 15    bucle_principal -> REPETIR PARIZQ inicializacion condicion incremento PARDER bucle_secundario
Rule 16    inicializacion -> I ASIGNACION NUM0 PUNTOYCOMA
Rule 17    condicion -> I MENOR TAMANO MENOS NUM1 PUNTOYCOMA
Rule 18    incremento -> I ASIGNACION I MAS NUM1
Rule 19    bucle_secundario -> REPETIR PARIZQ init_j cond_j inc_j PARDER bloque_si
Rule 20    init_j -> J ASIGNACION NUM0 PUNTOYCOMA
Rule 21    cond_j -> J MENOR TAMANO MENOS I MENOS NUM1 PUNTOYCOMA
Rule 22    inc_j -> J ASIGNACION J MAS NUM1
Rule 23    bloque_si -> SI PARIZQ condicion_arreglos PARDER bloque_intercambio FIN FIN FIN
Rule 24    condicion_arreglos -> acceso_arreglo MAYOR acceso_arreglo_siguiente
Rule 25    acceso_arreglo -> ARREGLO CORCHETEIZQ J CORCHETEDER
Rule 26    acceso_arreglo_siguiente -> ARREGLO CORCHETEIZQ J MAS NUM1 CORCHETEDER
Rule 27    bloque_intercambio -> asignacion_temp asignacion_arr1 asignacion_arr2
Rule 28    asignacion_temp -> TEMP ASIGNACION acceso_arreglo PUNTOYCOMA
Rule 29    asignacion_arr1 -> acceso_arreglo ASIGNACION acceso_arreglo_siguiente PUNTOYCOMA
Rule 30    asignacion_arr2 -> acceso_arreglo_siguiente ASIGNACION TEMP PUNTOYCOMA
Rule 31    bloque -> declaracion_arreglo llamada_ordenar
Rule 32    declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA
Rule 33    llamada_ordenar -> ORDENAR PARIZQ MIARREGLO PARDER PUNTOYCOMA

Terminals, with rules where they appear

ARREGLO              : 3 12 14 25 26
ASIGNACION           : 12 16 18 20 22 28 29 30 32
COMA                 : 32 32 32 32
CORCHETEDER          : 25 26 32
CORCHETEIZQ          : 25 26 32
DIFERENTE            : 
DOSPUNTOS            : 
ENTERO               : 4 5 6 8 9 10 12
FIN                  : 1 13 23 23 23
FUNCION              : 2
I                    : 4 8 16 17 18 18 21
IGUAL                : 
INICIAR              : 1
J                    : 5 9 20 21 22 22 25 26
LONGITUD             : 12
MAS                  : 18 22 26
MAYOR                : 24
MAYORIGUAL           : 
MENOR                : 17 21
MENORIGUAL           : 
MENOS                : 17 21 21
MIARREGLO            : 32 33
MOSTRAR              : 14
NUM0                 : 16 20
NUM1                 : 17 18 21 22 26 32
NUM2                 : 32
NUM3                 : 32
NUM4                 : 32
NUM5                 : 32
ORDENAMIENTO         : 1
ORDENAR              : 2 33
PARDER               : 2 12 14 15 19 23 33
PARIZQ               : 2 12 14 15 19 23 33
PROGRAMA             : 1
PUNTOYCOMA           : 1 4 5 6 8 9 10 12 14 16 17 20 21 28 29 30 32 33
REPETIR              : 15 19
SI                   : 23
TAMANO               : 12 17 21
TEMP                 : 6 10 28 30
VECTOR               : 3 32
error                : 

Nonterminals, with rules where they appear

acceso_arreglo       : 24 28 29
acceso_arreglo_siguiente : 24 29 30
asignacion_arr1      : 27
asignacion_arr2      : 27
asignacion_temp      : 27
bloque               : 1
bloque_intercambio   : 23
bloque_si            : 19
bucle_principal      : 13
bucle_secundario     : 15
cond_j               : 19
condicion            : 15
condicion_arreglos   : 23
cuerpo_funcion       : 2
declaracion_arreglo  : 31
declaracion_tamano   : 7 11
declaraciones        : 2 8 9 10 11
funcion              : 1
inc_j                : 19
incremento           : 15
inicializacion       : 15
init_j               : 19
llamada_ordenar      : 31
mostrar_arreglo      : 13
parametro            : 2
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque FIN

    ORDENAMIENTO    shift and go to state 3


state 3

    (1) programa -> PROGRAMA ORDENAMIENTO . PUNTOYCOMA funcion INICIAR bloque FIN

    PUNTOYCOMA      shift and go to state 4


state 4

    (1) programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA . funcion INICIAR bloque FIN
    (2) funcion -> . FUNCION ORDENAR PARIZQ parametro PARDER declaraciones cuerpo_funcion

    FUNCION         shift and go to state 6

    funcion                        shift and go to state 5

state 5

    (1) programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion . INICIAR bloque FIN

    INICIAR         shift and go to state 7


state 6

    (2) funcion -> FUNCION . ORDENAR PARIZQ parametro PARDER declaraciones cuerpo_funcion

    ORDENAR         shift and go to state 8


state 7

    (1) programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR . bloque FIN
    (31) bloque -> . declaracion_arreglo llamada_ordenar
    (32) declaracion_arreglo -> . VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    VECTOR          shift and go to state 11

    bloque                         shift and go to state 9
    declaracion_arreglo            shift and go to state 10

state 8

    (2) funcion -> FUNCION ORDENAR . PARIZQ parametro PARDER declaraciones cuerpo_funcion

    PARIZQ          shift and go to state 12


state 9

    (1) programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque . FIN

    FIN             shift and go to state 13


state 10

    (31) bloque -> declaracion_arreglo . llamada_ordenar
    (33) llamada_ordenar -> . ORDENAR PARIZQ MIARREGLO PARDER PUNTOYCOMA

    ORDENAR         shift and go to state 15

    llamada_ordenar                shift and go to state 14

state 11

    (32) declaracion_arreglo -> VECTOR . MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    MIARREGLO       shift and go to state 16


state 12

    (2) funcion -> FUNCION ORDENAR PARIZQ . parametro PARDER declaraciones cuerpo_funcion
    (3) parametro -> . VECTOR ARREGLO

    VECTOR          shift and go to state 18

    parametro                      shift and go to state 17

state 13

    (1) programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ORDENAMIENTO PUNTOYCOMA funcion INICIAR bloque FIN .)


state 14

    (31) bloque -> declaracion_arreglo llamada_ordenar .

    FIN             reduce using rule 31 (bloque -> declaracion_arreglo llamada_ordenar .)


state 15

    (33) llamada_ordenar -> ORDENAR . PARIZQ MIARREGLO PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 19


state 16

    (32) declaracion_arreglo -> VECTOR MIARREGLO . ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    ASIGNACION      shift and go to state 20


state 17

    (2) funcion -> FUNCION ORDENAR PARIZQ parametro . PARDER declaraciones cuerpo_funcion

    PARDER          shift and go to state 21


state 18

    (3) parametro -> VECTOR . ARREGLO

    ARREGLO         shift and go to state 22


state 19

    (33) llamada_ordenar -> ORDENAR PARIZQ . MIARREGLO PARDER PUNTOYCOMA

    MIARREGLO       shift and go to state 23


state 20

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION . CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    CORCHETEIZQ     shift and go to state 24


state 21

    (2) funcion -> FUNCION ORDENAR PARIZQ parametro PARDER . declaraciones cuerpo_funcion
    (4) declaraciones -> . ENTERO I PUNTOYCOMA
    (5) declaraciones -> . ENTERO J PUNTOYCOMA
    (6) declaraciones -> . ENTERO TEMP PUNTOYCOMA
    (7) declaraciones -> . declaracion_tamano
    (8) declaraciones -> . declaraciones ENTERO I PUNTOYCOMA
    (9) declaraciones -> . declaraciones ENTERO J PUNTOYCOMA
    (10) declaraciones -> . declaraciones ENTERO TEMP PUNTOYCOMA
    (11) declaraciones -> . declaraciones declaracion_tamano
    (12) declaracion_tamano -> . ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA

    ENTERO          shift and go to state 26

    declaraciones                  shift and go to state 25
    declaracion_tamano             shift and go to state 27

state 22

    (3) parametro -> VECTOR ARREGLO .

    PARDER          reduce using rule 3 (parametro -> VECTOR ARREGLO .)


state 23

    (33) llamada_ordenar -> ORDENAR PARIZQ MIARREGLO . PARDER PUNTOYCOMA

    PARDER          shift and go to state 28


state 24

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ . NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    NUM5            shift and go to state 29


state 25

    (2) funcion -> FUNCION ORDENAR PARIZQ parametro PARDER declaraciones . cuerpo_funcion
    (8) declaraciones -> declaraciones . ENTERO I PUNTOYCOMA
    (9) declaraciones -> declaraciones . ENTERO J PUNTOYCOMA
    (10) declaraciones -> declaraciones . ENTERO TEMP PUNTOYCOMA
    (11) declaraciones -> declaraciones . declaracion_tamano
    (13) cuerpo_funcion -> . bucle_principal mostrar_arreglo FIN
    (12) declaracion_tamano -> . ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA
    (15) bucle_principal -> . REPETIR PARIZQ inicializacion condicion incremento PARDER bucle_secundario

    ENTERO          shift and go to state 31
    REPETIR         shift and go to state 34

    cuerpo_funcion                 shift and go to state 30
    declaracion_tamano             shift and go to state 32
    bucle_principal                shift and go to state 33

state 26

    (4) declaraciones -> ENTERO . I PUNTOYCOMA
    (5) declaraciones -> ENTERO . J PUNTOYCOMA
    (6) declaraciones -> ENTERO . TEMP PUNTOYCOMA
    (12) declaracion_tamano -> ENTERO . TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA

    I               shift and go to state 35
    J               shift and go to state 36
    TEMP            shift and go to state 37
    TAMANO          shift and go to state 38


state 27

    (7) declaraciones -> declaracion_tamano .

    ENTERO          reduce using rule 7 (declaraciones -> declaracion_tamano .)
    REPETIR         reduce using rule 7 (declaraciones -> declaracion_tamano .)


state 28

    (33) llamada_ordenar -> ORDENAR PARIZQ MIARREGLO PARDER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 39


state 29

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 . COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    COMA            shift and go to state 40


state 30

    (2) funcion -> FUNCION ORDENAR PARIZQ parametro PARDER declaraciones cuerpo_funcion .

    INICIAR         reduce using rule 2 (funcion -> FUNCION ORDENAR PARIZQ parametro PARDER declaraciones cuerpo_funcion .)


state 31

    (8) declaraciones -> declaraciones ENTERO . I PUNTOYCOMA
    (9) declaraciones -> declaraciones ENTERO . J PUNTOYCOMA
    (10) declaraciones -> declaraciones ENTERO . TEMP PUNTOYCOMA
    (12) declaracion_tamano -> ENTERO . TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA

    I               shift and go to state 41
    J               shift and go to state 42
    TEMP            shift and go to state 43
    TAMANO          shift and go to state 38


state 32

    (11) declaraciones -> declaraciones declaracion_tamano .

    ENTERO          reduce using rule 11 (declaraciones -> declaraciones declaracion_tamano .)
    REPETIR         reduce using rule 11 (declaraciones -> declaraciones declaracion_tamano .)


state 33

    (13) cuerpo_funcion -> bucle_principal . mostrar_arreglo FIN
    (14) mostrar_arreglo -> . MOSTRAR PARIZQ ARREGLO PARDER PUNTOYCOMA

    MOSTRAR         shift and go to state 45

    mostrar_arreglo                shift and go to state 44

state 34

    (15) bucle_principal -> REPETIR . PARIZQ inicializacion condicion incremento PARDER bucle_secundario

    PARIZQ          shift and go to state 46


state 35

    (4) declaraciones -> ENTERO I . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 47


state 36

    (5) declaraciones -> ENTERO J . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 48


state 37

    (6) declaraciones -> ENTERO TEMP . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 49


state 38

    (12) declaracion_tamano -> ENTERO TAMANO . ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA

    ASIGNACION      shift and go to state 50


state 39

    (33) llamada_ordenar -> ORDENAR PARIZQ MIARREGLO PARDER PUNTOYCOMA .

    FIN             reduce using rule 33 (llamada_ordenar -> ORDENAR PARIZQ MIARREGLO PARDER PUNTOYCOMA .)


state 40

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA . NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    NUM3            shift and go to state 51


state 41

    (8) declaraciones -> declaraciones ENTERO I . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 52


state 42

    (9) declaraciones -> declaraciones ENTERO J . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 53


state 43

    (10) declaraciones -> declaraciones ENTERO TEMP . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 54


state 44

    (13) cuerpo_funcion -> bucle_principal mostrar_arreglo . FIN

    FIN             shift and go to state 55


state 45

    (14) mostrar_arreglo -> MOSTRAR . PARIZQ ARREGLO PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 56


state 46

    (15) bucle_principal -> REPETIR PARIZQ . inicializacion condicion incremento PARDER bucle_secundario
    (16) inicializacion -> . I ASIGNACION NUM0 PUNTOYCOMA

    I               shift and go to state 58

    inicializacion                 shift and go to state 57

state 47

    (4) declaraciones -> ENTERO I PUNTOYCOMA .

    ENTERO          reduce using rule 4 (declaraciones -> ENTERO I PUNTOYCOMA .)
    REPETIR         reduce using rule 4 (declaraciones -> ENTERO I PUNTOYCOMA .)


state 48

    (5) declaraciones -> ENTERO J PUNTOYCOMA .

    ENTERO          reduce using rule 5 (declaraciones -> ENTERO J PUNTOYCOMA .)
    REPETIR         reduce using rule 5 (declaraciones -> ENTERO J PUNTOYCOMA .)


state 49

    (6) declaraciones -> ENTERO TEMP PUNTOYCOMA .

    ENTERO          reduce using rule 6 (declaraciones -> ENTERO TEMP PUNTOYCOMA .)
    REPETIR         reduce using rule 6 (declaraciones -> ENTERO TEMP PUNTOYCOMA .)


state 50

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION . LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA

    LONGITUD        shift and go to state 59


state 51

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 . COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    COMA            shift and go to state 60


state 52

    (8) declaraciones -> declaraciones ENTERO I PUNTOYCOMA .

    ENTERO          reduce using rule 8 (declaraciones -> declaraciones ENTERO I PUNTOYCOMA .)
    REPETIR         reduce using rule 8 (declaraciones -> declaraciones ENTERO I PUNTOYCOMA .)


state 53

    (9) declaraciones -> declaraciones ENTERO J PUNTOYCOMA .

    ENTERO          reduce using rule 9 (declaraciones -> declaraciones ENTERO J PUNTOYCOMA .)
    REPETIR         reduce using rule 9 (declaraciones -> declaraciones ENTERO J PUNTOYCOMA .)


state 54

    (10) declaraciones -> declaraciones ENTERO TEMP PUNTOYCOMA .

    ENTERO          reduce using rule 10 (declaraciones -> declaraciones ENTERO TEMP PUNTOYCOMA .)
    REPETIR         reduce using rule 10 (declaraciones -> declaraciones ENTERO TEMP PUNTOYCOMA .)


state 55

    (13) cuerpo_funcion -> bucle_principal mostrar_arreglo FIN .

    INICIAR         reduce using rule 13 (cuerpo_funcion -> bucle_principal mostrar_arreglo FIN .)


state 56

    (14) mostrar_arreglo -> MOSTRAR PARIZQ . ARREGLO PARDER PUNTOYCOMA

    ARREGLO         shift and go to state 61


state 57

    (15) bucle_principal -> REPETIR PARIZQ inicializacion . condicion incremento PARDER bucle_secundario
    (17) condicion -> . I MENOR TAMANO MENOS NUM1 PUNTOYCOMA

    I               shift and go to state 63

    condicion                      shift and go to state 62

state 58

    (16) inicializacion -> I . ASIGNACION NUM0 PUNTOYCOMA

    ASIGNACION      shift and go to state 64


state 59

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD . PARIZQ ARREGLO PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 65


state 60

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA . NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    NUM2            shift and go to state 66


state 61

    (14) mostrar_arreglo -> MOSTRAR PARIZQ ARREGLO . PARDER PUNTOYCOMA

    PARDER          shift and go to state 67


state 62

    (15) bucle_principal -> REPETIR PARIZQ inicializacion condicion . incremento PARDER bucle_secundario
    (18) incremento -> . I ASIGNACION I MAS NUM1

    I               shift and go to state 69

    incremento                     shift and go to state 68

state 63

    (17) condicion -> I . MENOR TAMANO MENOS NUM1 PUNTOYCOMA

    MENOR           shift and go to state 70


state 64

    (16) inicializacion -> I ASIGNACION . NUM0 PUNTOYCOMA

    NUM0            shift and go to state 71


state 65

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ . ARREGLO PARDER PUNTOYCOMA

    ARREGLO         shift and go to state 72


state 66

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 . COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    COMA            shift and go to state 73


state 67

    (14) mostrar_arreglo -> MOSTRAR PARIZQ ARREGLO PARDER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 74


state 68

    (15) bucle_principal -> REPETIR PARIZQ inicializacion condicion incremento . PARDER bucle_secundario

    PARDER          shift and go to state 75


state 69

    (18) incremento -> I . ASIGNACION I MAS NUM1

    ASIGNACION      shift and go to state 76


state 70

    (17) condicion -> I MENOR . TAMANO MENOS NUM1 PUNTOYCOMA

    TAMANO          shift and go to state 77


state 71

    (16) inicializacion -> I ASIGNACION NUM0 . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 78


state 72

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO . PARDER PUNTOYCOMA

    PARDER          shift and go to state 79


state 73

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA . NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA

    NUM4            shift and go to state 80


state 74

    (14) mostrar_arreglo -> MOSTRAR PARIZQ ARREGLO PARDER PUNTOYCOMA .

    FIN             reduce using rule 14 (mostrar_arreglo -> MOSTRAR PARIZQ ARREGLO PARDER PUNTOYCOMA .)


state 75

    (15) bucle_principal -> REPETIR PARIZQ inicializacion condicion incremento PARDER . bucle_secundario
    (19) bucle_secundario -> . REPETIR PARIZQ init_j cond_j inc_j PARDER bloque_si

    REPETIR         shift and go to state 81

    bucle_secundario               shift and go to state 82

state 76

    (18) incremento -> I ASIGNACION . I MAS NUM1

    I               shift and go to state 83


state 77

    (17) condicion -> I MENOR TAMANO . MENOS NUM1 PUNTOYCOMA

    MENOS           shift and go to state 84


state 78

    (16) inicializacion -> I ASIGNACION NUM0 PUNTOYCOMA .

    I               reduce using rule 16 (inicializacion -> I ASIGNACION NUM0 PUNTOYCOMA .)


state 79

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 85


state 80

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 . COMA NUM1 CORCHETEDER PUNTOYCOMA

    COMA            shift and go to state 86


state 81

    (19) bucle_secundario -> REPETIR . PARIZQ init_j cond_j inc_j PARDER bloque_si

    PARIZQ          shift and go to state 87


state 82

    (15) bucle_principal -> REPETIR PARIZQ inicializacion condicion incremento PARDER bucle_secundario .

    MOSTRAR         reduce using rule 15 (bucle_principal -> REPETIR PARIZQ inicializacion condicion incremento PARDER bucle_secundario .)


state 83

    (18) incremento -> I ASIGNACION I . MAS NUM1

    MAS             shift and go to state 88


state 84

    (17) condicion -> I MENOR TAMANO MENOS . NUM1 PUNTOYCOMA

    NUM1            shift and go to state 89


state 85

    (12) declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA .

    ENTERO          reduce using rule 12 (declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA .)
    REPETIR         reduce using rule 12 (declaracion_tamano -> ENTERO TAMANO ASIGNACION LONGITUD PARIZQ ARREGLO PARDER PUNTOYCOMA .)


state 86

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA . NUM1 CORCHETEDER PUNTOYCOMA

    NUM1            shift and go to state 90


state 87

    (19) bucle_secundario -> REPETIR PARIZQ . init_j cond_j inc_j PARDER bloque_si
    (20) init_j -> . J ASIGNACION NUM0 PUNTOYCOMA

    J               shift and go to state 92

    init_j                         shift and go to state 91

state 88

    (18) incremento -> I ASIGNACION I MAS . NUM1

    NUM1            shift and go to state 93


state 89

    (17) condicion -> I MENOR TAMANO MENOS NUM1 . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 94


state 90

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 . CORCHETEDER PUNTOYCOMA

    CORCHETEDER     shift and go to state 95


state 91

    (19) bucle_secundario -> REPETIR PARIZQ init_j . cond_j inc_j PARDER bloque_si
    (21) cond_j -> . J MENOR TAMANO MENOS I MENOS NUM1 PUNTOYCOMA

    J               shift and go to state 97

    cond_j                         shift and go to state 96

state 92

    (20) init_j -> J . ASIGNACION NUM0 PUNTOYCOMA

    ASIGNACION      shift and go to state 98


state 93

    (18) incremento -> I ASIGNACION I MAS NUM1 .

    PARDER          reduce using rule 18 (incremento -> I ASIGNACION I MAS NUM1 .)


state 94

    (17) condicion -> I MENOR TAMANO MENOS NUM1 PUNTOYCOMA .

    I               reduce using rule 17 (condicion -> I MENOR TAMANO MENOS NUM1 PUNTOYCOMA .)


state 95

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 99


state 96

    (19) bucle_secundario -> REPETIR PARIZQ init_j cond_j . inc_j PARDER bloque_si
    (22) inc_j -> . J ASIGNACION J MAS NUM1

    J               shift and go to state 101

    inc_j                          shift and go to state 100

state 97

    (21) cond_j -> J . MENOR TAMANO MENOS I MENOS NUM1 PUNTOYCOMA

    MENOR           shift and go to state 102


state 98

    (20) init_j -> J ASIGNACION . NUM0 PUNTOYCOMA

    NUM0            shift and go to state 103


state 99

    (32) declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA .

    ORDENAR         reduce using rule 32 (declaracion_arreglo -> VECTOR MIARREGLO ASIGNACION CORCHETEIZQ NUM5 COMA NUM3 COMA NUM2 COMA NUM4 COMA NUM1 CORCHETEDER PUNTOYCOMA .)


state 100

    (19) bucle_secundario -> REPETIR PARIZQ init_j cond_j inc_j . PARDER bloque_si

    PARDER          shift and go to state 104


state 101

    (22) inc_j -> J . ASIGNACION J MAS NUM1

    ASIGNACION      shift and go to state 105


state 102

    (21) cond_j -> J MENOR . TAMANO MENOS I MENOS NUM1 PUNTOYCOMA

    TAMANO          shift and go to state 106


state 103

    (20) init_j -> J ASIGNACION NUM0 . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 107


state 104
